--- a/src/clientGUI/application.css
+++ b/src/clientGUI/application.css
@@ -1,1 +1,1 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+/* Leave this here until a line has been added */
