--- a/src/clientGUI/Sample.fxml
+++ b/src/clientGUI/Sample.fxml
@@ -109,7 +109,8 @@
                 <ChoiceBox layoutX="743.0" layoutY="2.0" prefWidth="150.0" />
                 <ChoiceBox layoutX="743.0" layoutY="28.0" prefWidth="150.0" />
             <Button layoutX="14.0" layoutY="39.0" mnemonicParsing="false" text="Add Service" />
-                        <Button layoutX="350.0" layoutY="15.0" mnemonicParsing="false" onAction="#print" text="Button" />
+                        <Button layoutX="75.0" layoutY="9.0" mnemonicParsing="false" onAction="#print" text="Print" />
+                        <TextField layoutX="136.0" layoutY="19.0" prefHeight="25.0" prefWidth="267.0" />
                       
               </children>
             </AnchorPane>
