--- a/src/com/roguedevstudios/uarg/System/UI/Sample.fxml
+++ b/src/com/roguedevstudios/uarg/System/UI/Sample.fxml
@@ -5,23 +5,21 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="Root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clientGUI.SampleController">
+<BorderPane fx:id="Root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.roguedevstudios.uarg.System.UI.SampleController">
   <center>
     <BorderPane fx:id="Root" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
       <center>
@@ -40,19 +38,6 @@
                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                              </columnResizePolicy></TableView>
                           </center>
-                                       <bottom>
-                                          <ButtonBar buttonOrder="U+L_HE+FBIX_NCYOA_R" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                                            <buttons>
-                                                <TextField fx:id="LastName" promptText="LAST NAME" />
-                                                <TextField fx:id="FirstName" promptText="FIRST NAME" />
-                                                <DatePicker fx:id="Date" promptText="MM/DD/YYYY" />
-                                                <TextField fx:id="Cash" promptText="\$$$" />
-                                                <TextField fx:id="City" promptText="CITY" />
-                                                <TextField fx:id="State" promptText="STATE" />
-                                                <Button fx:id="AddEntry" mnemonicParsing="false" text="Add" />
-                                            </buttons>
-                                          </ButtonBar>
-                                       </bottom>
                         </BorderPane>
                       </content>
                     </Tab>
@@ -143,6 +128,17 @@
             <MenuItem mnemonicParsing="false" text="About" />
           </items>
         </Menu>
+            <Menu mnemonicParsing="false" text="View">
+               <items>
+                  <Menu mnemonicParsing="false" text="High Contrast">
+                    <items>
+                        <RadioMenuItem id="ViewHighContrastWhiteOnBlack" mnemonicParsing="false" onAction="#ViewHighContrastWhiteOnBlackAction" text="White On Black" />
+                        <RadioMenuItem id="ViewHighContrastBlackOnWhite" mnemonicParsing="false" onAction="#ViewHighContrastBlackOnWhiteAction" text="Black On White" />
+                        <RadioMenuItem id="ViewHighContrastYellowOnBlack" mnemonicParsing="false" onAction="#ViewHighContrastYellowOnBlackAction" text="Yellow On Black" />
+                    </items>
+                  </Menu>
+               </items>
+            </Menu>
       </menus>
     </MenuBar>
   </top>
