--- a/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
+++ b/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
@@ -5,8 +5,6 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -89,8 +87,6 @@
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="56.0" prefWidth="804.0">
               <children>
                 <Button layoutX="14.0" layoutY="9.0" mnemonicParsing="false" text="Export" />
-                <ChoiceBox layoutX="743.0" layoutY="2.0" prefWidth="150.0" />
-                <ChoiceBox layoutX="743.0" layoutY="34.0" prefWidth="150.0" />
             <Button layoutX="14.0" layoutY="39.0" mnemonicParsing="false" text="Add Service" />
               </children>
             </AnchorPane>
@@ -109,6 +105,8 @@
             <MenuItem fx:id="FileImport" mnemonicParsing="false" onAction="#FileImportAction" text="Import" />
             <MenuItem fx:id="FileSave" mnemonicParsing="false" onAction="#FileSaveAction" text="Save" />
             <MenuItem fx:id="FileSaveAs" mnemonicParsing="false" onAction="#FileSaveAsAction" text="Save as" />
+                  <MenuItem fx:id="FileNew1" mnemonicParsing="false" onAction="#FileNewAction" text="Open Configuration" />
+                  <MenuItem fx:id="FileNew11" mnemonicParsing="false" onAction="#FileNewAction" text="Close Configuration" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
@@ -116,11 +114,6 @@
             <MenuItem fx:id="EditCut" mnemonicParsing="false" onAction="#EditCutAction" text="Cut" />
             <MenuItem fx:id="EditCopy" mnemonicParsing="false" onAction="#EditCopyAction" text="Copy" />
             <MenuItem fx:id="EditPaste" mnemonicParsing="false" onAction="#EditPasteAction" text="Paste" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Tools">
-          <items>
-            <CheckMenuItem mnemonicParsing="false" text="Protect Sheet" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
