UARG-157 Default font set to Arial

--- a/src/com/roguedevstudios/uarg/System/UI/Resources/BlackOnWhite.css
+++ b/src/com/roguedevstudios/uarg/System/UI/Resources/BlackOnWhite.css
@@ -4,6 +4,11 @@
  *                                                                             *
  ******************************************************************************/
 
+* {
+	-fx-font-family: arial;
+	-fx-font-size: 12;
+}
+
 .root {
     -fx-base: white;
     -fx-background: -fx-base;
