--- a/src/com/roguedevstudios/uarg/System/UI/Resources/YellowOnBlack.css
+++ b/src/com/roguedevstudios/uarg/System/UI/Resources/YellowOnBlack.css
@@ -4,6 +4,11 @@
  *                                                                             *
  ******************************************************************************/
 
+* {
+	-fx-font-family: arial;
+	-fx-font-size: 12;
+}
+
 .root {
     -fx-base: black;
     -fx-background: -fx-base;
