UARG-Marko Refactor + high contrast logic error fix
Renamed SpashScreen.java to SplashScreen
Renamed application.css to Application.css
SplashScreen - Made more use of APPLICATION_ICON instead of long strings for readability
Renamed SampleController to GUIController
GUIController - Fixed a logic error breaking high contrast selections

--- a/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
+++ b/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="Root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.roguedevstudios.uarg.System.UI.SampleController">
+<BorderPane fx:id="Root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.roguedevstudios.uarg.System.UI.GUIController">
   <center>
     <BorderPane fx:id="Root" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
       <center>
