--- a/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
+++ b/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
@@ -132,11 +132,7 @@
                            </toggleGroup></RadioMenuItem>
                         <RadioMenuItem id="ViewHighContrastYellowOnBlack" mnemonicParsing="false" onAction="#ViewHighContrastYellowOnBlackAction" text="Yellow On Black" toggleGroup="$ToggleGroupHighContrast" />
                         <RadioMenuItem id="ViewHighContrastBlackOnWhite" mnemonicParsing="false" onAction="#ViewHighContrastBlackOnWhiteAction" text="Black On White" toggleGroup="$ToggleGroupHighContrast" />
-                        <RadioMenuItem id="ViewHighContrastBlackOnWhite" mnemonicParsing="false" onAction="#ViewHighContrastBlueOnYellowAction" text="Blue On Yellow">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="ToggleGroupHighContrast1" />
-                           </toggleGroup>
-                        </RadioMenuItem>
+                        <RadioMenuItem id="ViewHighContrastBlackOnWhite" mnemonicParsing="false" onAction="#ViewHighContrastBlueOnYellowAction" text="Blue On Yellow" toggleGroup="$ToggleGroupHighContrast" />
                     </items>
                   </Menu>
                </items>
